fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 html, body, svg {
+    display: block;
     width:  100%;
     height: 100%;
 
